# astra-browser

./: .gitignore  .gitmodules  Cargo.toml  imgui.ini  premake5.lua  settings.ini  setup.bat  setup.py
include/astra/: application.h  common.h  graphics.h  window.h
source/: application.cpp  graphics.cpp  main.cpp  window.cpp
src/: app.rs  config.rs  layer.rs  main.rs  window.rs
