[package]
name = "astra"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/xd-Abi/astra-browser/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"]}
widestring = "0.5.0"
com = "0.2.0"
once_cell = "1.3.1"
webview2 = "0.1.4"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"